# spore-proxy

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SNIPPETS  vcpkg.json
.github/workflows/: ci.yml  pull_requests.yml
benchmarks/: CMakeLists.txt
benchmarks/src/: main.cpp
docs/: AdvancedUsage.md
examples/hello-world/: CMakeLists.txt
examples/hello-world/include/spore/examples/: hello_world.hpp
examples/hello-world/src/: main.cpp
include/spore/proxy/: .gitignore  proxy.hpp  proxy_base.hpp  proxy_concepts.hpp  proxy_conversions.hpp  proxy_conversions.inl  proxy_dispatch.hpp  proxy_facade.hpp  proxy_forward_like.hpp  proxy_macros.hpp  proxy_semantics.hpp  proxy_storage.hpp  proxy_type_info.hpp  proxy_type_set.hpp  proxy_version.hpp.in
include/spore/proxy/detail/: proxy_counter.hpp  proxy_hash.hpp  proxy_no_lock.hpp  proxy_once.hpp  proxy_spin_lock.hpp  proxy_type_id.hpp  proxy_type_list.hpp  proxy_type_set.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/include/spore/proxy/tests/: proxy_tests.hpp  t_conversions.hpp  t_dispatch.hpp  t_observable.hpp  t_semantics.hpp  t_templates.hpp  t_thread.hpp  t_translation_unit.hpp
tests/src/: t_proxy.cpp  t_proxy.cpp~  t_proxy_semantics.cpp  t_proxy_storage.cpp
tests/src/detail/: make_proxy.cpp  some_other_work.cpp  some_template_work.cpp  some_work.cpp
